add current year select and disable and enable the next and previous button

--- a/www/index.html
+++ b/www/index.html
@@ -23,7 +23,7 @@
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
   </head>
-  <body ng-app="starter" ng-controller='AppCtrl'>
+  <body ng-app="starter">
     <ion-nav-bar class="bar-positive" align-title="center">
     </ion-nav-bar>
     <ion-nav-view></ion-nav-view>
